TIKA-4128 -- bump to Java 11 (#1334)
* TIKA-4128 -- bump to Java 11